--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.ts",
-    "start": "node dist/app.js"
-  },
+ "scripts": {
+  "dev": "nodemon src/app.ts",
+  "build": "tsc",
+  "start": "node dist/app.js"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
