--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
  "scripts": {
   "dev": "nodemon src/app.ts",
-  "build": "npx prisma generate && tsc",
+  "build": "prisma generate && tsc",
   "start": "node dist/app.js"
 },
 
