--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
  "scripts": {
   "dev": "nodemon src/app.ts",
   "build": "prisma generate && tsc",
-  "start": "node dist/app.js"
+  "start": "node build/app.js"
 },
   "keywords": [],
   "author": "",
